# time-manager

./: Cargo.toml  Readme.md
model/: best_model.ipynb
src/: app.rs  lib.rs  main.rs  state.rs  tag_predict_model.onnx  theme.rs  utils.rs
src/command/: mod.rs
src/state/: mod.rs
src/task/: mod.rs
src/ui/: mod.rs  tabs.rs
src/ui/control/: input.rs  mod.rs  submit_btn.rs
src/utils/: mod.rs
