[package]
name = "time-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4.31", features=["serde"]}
colorful = "0.2.2"
regex = "1.10.3"
rust_xlsxwriter = {version="0.61.0", features=["chrono"]}
serde = {version="1.0.196", features=["derive"]}
serde_json = "1.0.113"
